# wagtail-links

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  MANIFEST.in  Makefile  README.md  README.rst  docker-compose.yml  manage.py  mypy.ini  pyproject.toml  requirements.txt  setup.py  tox.ini
sandbox/: models.py  settings.py  urls.py
sandbox/sandbox/: apps.py  models.py  settings.py  urls.py  wsgi.py
sandbox/sandbox/migrations/: 0001_initial.py
sandbox/templates/sandbox/: example_page.html
src/wagtail_links/: __init__.py  apps.py  fields.py  forms.py  models.py  resolver.py  tests.py  wagtail_hooks.py
src/wagtail_links/locale/es/LC_MESSAGES/: django.mo  django.po
src/wagtail_links/migrations/: 0001_initial.py  0002_auto_20170522_1552.py  0003_auto_20170522_2015.py  0004_auto_20190411_2102.py  0005_auto_20191203_1908_squashed_0006_auto_20191204_2129.py  0006_auto_20200101_1646.py  0007_auto_20200101_1658.py
src/wagtail_links/templatetags/: wagtail_links.py
wagtail_links/: apps.py  fields.py  models.py  tests.py
wagtail_links/migrations/: 0001_initial.py  0002_auto_20170522_1552.py  0003_auto_20170522_2015.py  0004_auto_20190411_2102.py  0006_auto_20200101_1646.py  0007_auto_20200101_1658.py  0008_reindex_links.py
wagtail_links/templatetags/: wagtail_links.py
