[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wagtail-links"
version = "2.11.0"
description = "Wagtail links provides a consistent way to refer to links in a wagtail page."
readme = "README.md"
dependencies = ["wagtail (>=6.3)", "django-stubs-ext (>=5.1.3,<6)"]
requires-python = ">=3.11"

[project.license]
text = "ISC"

[[project.authors]]
name = "thelab"
email = "thelabdev@thelab.co"

[project.urls]
Homepage = "https://gitlab.com/thelabnyc/wagtail-links"
Repository = "https://gitlab.com/thelabnyc/wagtail-links"

[dependency-groups]
dev = [
    "flake8 (==7.3.0)",
    "tox==4.27.0",
    "mypy (==1.16.1)",
    "django-stubs (==5.2.1)",
    "coverage (==7.9.2)",
    "tox-uv>=1.26.1",
]

[tool.hatch.build.targets.wheel]
packages = ["wagtail_links"]

[tool.isort]
profile = "black"
from_first = true

[tool.commitizen]
name = "cz_conventional_commits"
annotated_tag = true
gpg_sign = true
tag_format = "v$version"
update_changelog_on_bump = true
changelog_merge_prerelease = true
version_provider = "pep621"
version_scheme = "pep440"
version_files = [
    "pyproject.toml:version",
]
pre_bump_hooks = [
    "pre-commit run --all-files || true",
]
post_bump_hooks = [
    "git push origin master $CZ_POST_CURRENT_TAG_VERSION"
]
