[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wagtail-links"
version = "2.11.0"
description = "Wagtail links provides a consistent way to refer to links in a wagtail page."
readme = "README.md"
dependencies = ["wagtail (>=7.0)", "django-stubs-ext (>=5.2.9,<6)"]
requires-python = ">=3.11"

[project.license]
text = "ISC"

[[project.authors]]
name = "thelab"
email = "thelabdev@thelab.co"

[project.urls]
Homepage = "https://gitlab.com/thelabnyc/wagtail-links"
Repository = "https://gitlab.com/thelabnyc/wagtail-links"

[dependency-groups]
dev = [
    "ruff>=0.15.0",
    "tox==4.34.1",
    "mypy (==1.19.1)",
    "django-stubs (==5.2.9)",
    "coverage (==7.13.3)",
    "tox-uv>=1.29.0",
]

[tool.hatch.build.targets.wheel]
packages = ["wagtail_links"]

[[tool.uv.index]]
name = "thelabnyc"
url = "https://gitlab.com/api/v4/groups/269576/-/packages/pypi/simple"
explicit = true

[tool.ruff]
line-length = 160
exclude = ["migrations"]

[tool.ruff.lint.isort]
from-first = true

[tool.isort]
profile = "black"
from_first = true

[tool.commitizen]
name = "cz_conventional_commits"
annotated_tag = true
gpg_sign = true
tag_format = "v$version"
update_changelog_on_bump = true
changelog_merge_prerelease = true
version_provider = "pep621"
version_scheme = "pep440"
version_files = ["pyproject.toml:version"]
pre_bump_hooks = ["pre-commit run --all-files || true"]
post_bump_hooks = ["git push origin master $CZ_POST_CURRENT_TAG_VERSION"]
